starting AVL trees